--- a/index.html
+++ b/index.html
@@ -161,7 +161,39 @@
 							/>
 							<h3 class="team-name">Christopher Walker</h3>
 							<p class="team-desc">Product Designer</p>
+							<ul class="team-social-list">
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://instagram.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://twitter.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://facebook.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://linkedin.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
+
 						<li class="team-item">
 							<img
 								class="team-img"
@@ -171,7 +203,38 @@
 							/>
 							<h3 class="team-name">Kylie Evans</h3>
 							<p class="team-desc">Frontend Developer</p>
+							<ul class="team-social-list">
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://instagram.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://twitter.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://facebook.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://linkedin.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
+
 						<li class="team-item">
 							<img
 								class="team-img"
@@ -181,7 +244,38 @@
 							/>
 							<h3 class="team-name">Ryan Harris</h3>
 							<p class="team-desc">Marketing</p>
+							<ul class="team-social-list">
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://instagram.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://twitter.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://facebook.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://linkedin.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
+
 						<li class="team-item">
 							<img
 								class="team-img"
@@ -191,6 +285,36 @@
 							/>
 							<h3 class="team-name">Tyler Moore</h3>
 							<p class="team-desc">UI Designer</p>
+							<ul class="team-social-list">
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://instagram.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://twitter.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://facebook.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-social-item">
+									<a class="team-social-link" href="https://linkedin.com">
+										<svg class="team-social-link">
+											<use href="./images/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
 					</ul>
 				</div>
