--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="/css/styles.css" />
+		<link rel="stylesheet" href="./css/styles.css" />
 		<title>Document</title>
 	</head>
 	<body>
@@ -315,6 +315,62 @@
 									</a>
 								</li>
 							</ul>
+						</li>
+					</ul>
+				</div>
+			</section>
+
+			<!-- CLIENTS -->
+			<section class="clients">
+				<div class="container">
+					<h2 class="section-title">Regular Customers</h2>
+					<ul class="clients-list">
+						<li class="clients-item">
+							<a class="clients-link" href="/">
+								<svg class="clients-icon">
+									<use href="./images/sprite.svg#icon-client1"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="clients-item">
+							<a class="clients-link" href="/">
+								<svg class="clients-icon">
+									<use href="./images/sprite.svg#icon-client2"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="clients-item">
+							<a class="clients-link" href="/">
+								<svg class="clients-icon">
+									<use href="./images/sprite.svg#icon-client3"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="clients-item">
+							<a class="clients-link" href="/">
+								<svg class="clients-icon">
+									<use href="./images/sprite.svg#icon-client4"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="clients-item">
+							<a class="clients-link" href="/">
+								<svg class="clients-icon">
+									<use href="./images/sprite.svg#icon-client5"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="clients-item">
+							<a class="clients-link" href="/">
+								<svg class="clients-icon">
+									<use href="./images/sprite.svg#icon-client6"></use>
+								</svg>
+							</a>
 						</li>
 					</ul>
 				</div>
