footer and fixed social team

--- a/index.html
+++ b/index.html
@@ -164,21 +164,21 @@
 							<ul class="team-social-list">
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://instagram.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://twitter.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://facebook.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>
@@ -186,7 +186,7 @@
 
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://linkedin.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
@@ -206,28 +206,28 @@
 							<ul class="team-social-list">
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://instagram.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://twitter.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://facebook.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://linkedin.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
@@ -247,28 +247,28 @@
 							<ul class="team-social-list">
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://instagram.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://twitter.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://facebook.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://linkedin.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
@@ -288,28 +288,28 @@
 							<ul class="team-social-list">
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://instagram.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://twitter.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://facebook.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-social-item">
 									<a class="team-social-link" href="https://linkedin.com">
-										<svg class="team-social-link">
+										<svg class="team-social-icon">
 											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
 									</a>
@@ -380,14 +380,51 @@
 		<footer class="footer" id="contacts">
 			<div class="container">
 				<div class="footer-address-wrap">
-					<a class="logo logo-bottom" href="/index.html"
-						><span class="logo-accent">Web</span>Studio</a
-					>
+					<a class="logo logo-bottom" href="/index.html">
+						<span class="logo-accent">Web</span>Studio
+					</a>
 					<address class="footer-contacts">
 						<p class="footer-address">695 Park Ave, NY 10065, USA</p>
-						<a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+						<a class="footer-address-link" href="mailto:info@devstudio.com"> info@devstudio.com </a>
 						<a class="footer-address-link" href="tel:+12127724150">+1 212-772-4150</a>
 					</address>
+				</div>
+
+				<div class="footer-social">
+					<h3 class="footer-social-title">Find us on</h3>
+					<ul class="footer-social-list">
+						<li class="footer-social-item">
+							<a class="footer-social-link" href="https://instagram.com">
+								<svg class="footer-social-icon">
+									<use href="./images/sprite.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="footer-social-item">
+							<a class="footer-social-link" href="https://twitter.com">
+								<svg class="footer-social-icon">
+									<use href="./images/sprite.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="footer-social-item">
+							<a class="footer-social-link" href="https://facebook.com">
+								<svg class="footer-social-icon">
+									<use href="./images/sprite.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="footer-social-item">
+							<a class="footer-social-link" href="https://linkedin.com">
+								<svg class="footer-social-icon">
+									<use href="./images/sprite.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</footer>
