portfolio projects overlay

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -61,112 +64,226 @@
 
 					<ul class="portfolio-list">
 						<li class="portfolio-item">
-							<img
-								class="portfolio-img"
-								src="/images/portfolio/desktop/web-site/technoduck.jpg"
-								alt="Technoduck"
-								width="370"
-							/>
-							<div class="portfolio-desc-wrap">
-								<h3 class="portfolio-name">Technoduck</h3>
-								<p class="portfolio-desc">Web-site</p>
-							</div>
+							<a class="portfolio-link" href="/">
+								<div class="portfolio-wrapper">
+									<img
+										class="portfolio-img"
+										src="/images/portfolio/desktop/web-site/technoduck.jpg"
+										alt="Technoduck"
+										width="370"
+									/>
+									<div class="portfolio-overlay">
+										<p class="portfolio-details">
+											Technoduck is a state-of-the-art coronavirus distribution platform. Companies
+											use this platform for digital espionage and attacks on competitors' secure
+											servers.
+
+											<br />
+											<br />
+											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
+											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
+											eum hic? Consectetur accusamus voluptates velit ad rerum et dignissimos autem,
+											repellendus suscipit libero quos aspernatur hic consequatur perspiciatis quam.
+										</p>
+									</div>
+								</div>
+								<div class="portfolio-desc-wrap">
+									<h3 class="portfolio-name">Technoduck</h3>
+									<p class="portfolio-desc">Web-site</p>
+								</div>
+							</a>
 						</li>
+
 						<li class="portfolio-item">
-							<img
-								class="portfolio-img"
-								src="/images/portfolio/desktop/design/poster-new-orlean-vs-golden-star.jpg"
-								alt="Poster New Orlean vs Golden Star"
-								width="370"
-							/>
-							<div class="portfolio-desc-wrap">
-								<h3 class="portfolio-name">Poster New Orlean vs Golden Star</h3>
-								<p class="portfolio-desc">Design</p>
-							</div>
+							<a class="portfolio-link" href="/">
+								<div class="portfolio-wrapper">
+									<img
+										class="portfolio-img"
+										src="/images/portfolio/desktop/design/poster-new-orlean-vs-golden-star.jpg"
+										alt="Poster New Orlean vs Golden Star"
+										width="370"
+									/>
+									<div class="portfolio-overlay">
+										<p class="portfolio-details">
+											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
+											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
+											eum hic? Consectetur accusamus voluptates velit ad rerum et dignissimos autem
+										</p>
+									</div>
+								</div>
+								<div class="portfolio-desc-wrap">
+									<h3 class="portfolio-name">Poster New Orlean vs Golden Star</h3>
+									<p class="portfolio-desc">Design</p>
+								</div>
+							</a>
 						</li>
+
 						<li class="portfolio-item">
-							<img
-								class="portfolio-img"
-								src="/images/portfolio/desktop/apps/seafood-restaurant.jpg"
-								alt="Seafood Restaurant "
-								width="370"
-							/>
-							<div class="portfolio-desc-wrap">
-								<h3 class="portfolio-name">Seafood Restaurant</h3>
-								<p class="portfolio-desc">Apps</p>
-							</div>
+							<a class="portfolio-link" href="/">
+								<div class="portfolio-wrapper">
+									<img
+										class="portfolio-img"
+										src="/images/portfolio/desktop/apps/seafood-restaurant.jpg"
+										alt="Seafood Restaurant "
+										width="370"
+									/>
+									<div class="portfolio-overlay">
+										<p class="portfolio-details">
+											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
+											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
+											eum hic? Consectetur accusamus voluptates velit ad rerum et dignissimos autem
+										</p>
+									</div>
+								</div>
+								<div class="portfolio-desc-wrap">
+									<h3 class="portfolio-name">Seafood Restaurant</h3>
+									<p class="portfolio-desc">Apps</p>
+								</div>
+							</a>
 						</li>
+
 						<li class="portfolio-item">
-							<img
-								class="portfolio-img"
-								src="/images/portfolio/desktop/marketing/project-prime.jpg"
-								alt="Project Prime"
-								width="370"
-							/>
-							<div class="portfolio-desc-wrap">
-								<h3 class="portfolio-name">Project Prime</h3>
-								<p class="portfolio-desc">Marketing</p>
-							</div>
+							<a class="portfolio-link" href="/">
+								<div class="portfolio-wrapper">
+									<img
+										class="portfolio-img"
+										src="/images/portfolio/desktop/marketing/project-prime.jpg"
+										alt="Project Prime"
+										width="370"
+									/>
+									<div class="portfolio-overlay">
+										<p class="portfolio-details">
+											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
+											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
+											eum hic? Consectetur accusamus voluptates velit ad rerum et dignissimos autem
+										</p>
+									</div>
+								</div>
+								<div class="portfolio-desc-wrap">
+									<h3 class="portfolio-name">Project Prime</h3>
+									<p class="portfolio-desc">Marketing</p>
+								</div>
+							</a>
 						</li>
+
 						<li class="portfolio-item">
-							<img
-								class="portfolio-img"
-								src="/images/portfolio/desktop/apps/project-boxes.jpg"
-								alt="Project Boxes"
-								width="370"
-							/>
-							<div class="portfolio-desc-wrap">
-								<h3 class="portfolio-name">Project Boxes</h3>
-								<p class="portfolio-desc">Apps</p>
-							</div>
+							<a class="portfolio-link" href="/">
+								<div class="portfolio-wrapper">
+									<img
+										class="portfolio-img"
+										src="/images/portfolio/desktop/apps/project-boxes.jpg"
+										alt="Project Boxes"
+										width="370"
+									/>
+									<div class="portfolio-overlay">
+										<p class="portfolio-details">
+											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
+											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
+											eum hic? Consectetur accusamus voluptates velit ad rerum et dignissimos autem
+										</p>
+									</div>
+								</div>
+								<div class="portfolio-desc-wrap">
+									<h3 class="portfolio-name">Project Boxes</h3>
+									<p class="portfolio-desc">Apps</p>
+								</div>
+							</a>
 						</li>
+
 						<li class="portfolio-item">
-							<img
-								class="portfolio-img"
-								src="/images/portfolio/desktop/web-site/inspiration-has-no-borders.jpg"
-								alt="Inspiration has no Borders"
-								width="370"
-							/>
-							<div class="portfolio-desc-wrap">
-								<h3 class="portfolio-name">Inspiration has no Borders</h3>
-								<p class="portfolio-desc">Web-site</p>
-							</div>
+							<a class="portfolio-link" href="/">
+								<div class="portfolio-wrapper">
+									<img
+										class="portfolio-img"
+										src="/images/portfolio/desktop/web-site/inspiration-has-no-borders.jpg"
+										alt="Inspiration has no Borders"
+										width="370"
+									/>
+									<div class="portfolio-overlay">
+										<p class="portfolio-details">
+											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
+											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
+											eum hic? Consectetur accusamus voluptates velit ad rerum et dignissimos autem
+										</p>
+									</div>
+								</div>
+								<div class="portfolio-desc-wrap">
+									<h3 class="portfolio-name">Inspiration has no Borders</h3>
+									<p class="portfolio-desc">Web-site</p>
+								</div>
+							</a>
 						</li>
+
 						<li class="portfolio-item">
-							<img
-								class="portfolio-img"
-								src="/images/portfolio/desktop/design/limited-edition.jpg"
-								alt="Limited Edition"
-								width="370"
-							/>
-							<div class="portfolio-desc-wrap">
-								<h3 class="portfolio-name">Limited Edition</h3>
-								<p class="portfolio-desc">Design</p>
-							</div>
+							<a class="portfolio-link" href="/">
+								<div class="portfolio-wrapper">
+									<img
+										class="portfolio-img"
+										src="/images/portfolio/desktop/design/limited-edition.jpg"
+										alt="Limited Edition"
+										width="370"
+									/>
+									<div class="portfolio-overlay">
+										<p class="portfolio-details">
+											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
+											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
+											eum hic? Consectetur accusamus voluptates velit ad rerum et dignissimos autem
+										</p>
+									</div>
+								</div>
+								<div class="portfolio-desc-wrap">
+									<h3 class="portfolio-name">Limited Edition</h3>
+									<p class="portfolio-desc">Design</p>
+								</div>
+							</a>
 						</li>
+
 						<li class="portfolio-item">
-							<img
-								class="portfolio-img"
-								src="/images/portfolio/desktop/marketing/project-lab.jpg"
-								alt="Project LAB"
-								width="370"
-							/>
-							<div class="portfolio-desc-wrap">
-								<h3 class="portfolio-name">Project LAB</h3>
-								<p class="portfolio-desc">Marketing</p>
-							</div>
+							<a class="portfolio-link" href="/">
+								<div class="portfolio-wrapper">
+									<img
+										class="portfolio-img"
+										src="/images/portfolio/desktop/marketing/project-lab.jpg"
+										alt="Project LAB"
+										width="370"
+									/>
+									<div class="portfolio-overlay">
+										<p class="portfolio-details">
+											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
+											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
+											eum hic? Consectetur accusamus voluptates velit ad rerum et dignissimos autem
+										</p>
+									</div>
+								</div>
+								<div class="portfolio-desc-wrap">
+									<h3 class="portfolio-name">Project LAB</h3>
+									<p class="portfolio-desc">Marketing</p>
+								</div>
+							</a>
 						</li>
+
 						<li class="portfolio-item">
-							<img
-								class="portfolio-img"
-								src="/images/portfolio/desktop/apps/growing-business.jpg"
-								alt="Growing Business"
-								width="370"
-							/>
-							<div class="portfolio-desc-wrap">
-								<h3 class="portfolio-name">Growing Business</h3>
-								<p class="portfolio-desc">Apps</p>
-							</div>
+							<a class="portfolio-link" href="/">
+								<div class="portfolio-wrapper">
+									<img
+										class="portfolio-img"
+										src="/images/portfolio/desktop/apps/growing-business.jpg"
+										alt="Growing Business"
+										width="370"
+									/>
+									<div class="portfolio-overlay">
+										<p class="portfolio-details">
+											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
+											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
+											eum hic? Consectetur accusamus voluptates velit ad rerum et dignissimos autem
+										</p>
+									</div>
+								</div>
+								<div class="portfolio-desc-wrap">
+									<h3 class="portfolio-name">Growing Business</h3>
+									<p class="portfolio-desc">Apps</p>
+								</div>
+							</a>
 						</li>
 					</ul>
 				</div>
