--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
 								alt="coding"
 								width="370"
 							/>
+							<div class="services-desc">
+								<h3 class="services-subject">DESKTOP APPS</h3>
+							</div>
 						</li>
 						<li class="services-item">
 							<img
@@ -137,6 +140,9 @@
 								alt="testing"
 								width="370"
 							/>
+							<div class="services-desc">
+								<h3 class="services-subject">Mobile APPS</h3>
+							</div>
 						</li>
 						<li class="services-item">
 							<img
@@ -145,6 +151,9 @@
 								alt="designing"
 								width="370"
 							/>
+							<div class="services-desc">
+								<h3 class="services-subject">DESIGN SOLUTIONS</h3>
+							</div>
 						</li>
 					</ul>
 				</div>
