--- a/portfolio.html
+++ b/portfolio.html
@@ -292,14 +292,53 @@
 
 		<footer class="footer" id="contacts">
 			<div class="container">
-				<a class="logo logo-bottom" href="/index.html">
-					<span class="logo-accent">Web</span>Studio</a
-				>
-				<address class="footer-contacts">
-					<p class="footer-address">695 Park Ave, NY 10065, USA</p>
-					<a class="footer-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-					<a class="footer-address-link" href="tel:+12127724150">+1 212-772-4150</a>
-				</address>
+				<div class="footer-address-wrap">
+					<a class="logo logo-bottom" href="/index.html">
+						<span class="logo-accent">Web</span>Studio
+					</a>
+					<address class="footer-contacts">
+						<p class="footer-address">695 Park Ave, NY 10065, USA</p>
+						<a class="footer-address-link" href="mailto:info@devstudio.com"> info@devstudio.com </a>
+						<a class="footer-address-link" href="tel:+12127724150">+1 212-772-4150</a>
+					</address>
+				</div>
+
+				<div class="footer-social">
+					<h3 class="footer-social-title">Find us on</h3>
+					<ul class="footer-social-list">
+						<li class="footer-social-item">
+							<a class="footer-social-link" href="https://instagram.com">
+								<svg class="footer-social-icon">
+									<use href="./images/sprite.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="footer-social-item">
+							<a class="footer-social-link" href="https://twitter.com">
+								<svg class="footer-social-icon">
+									<use href="./images/sprite.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="footer-social-item">
+							<a class="footer-social-link" href="https://facebook.com">
+								<svg class="footer-social-icon">
+									<use href="./images/sprite.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+
+						<li class="footer-social-item">
+							<a class="footer-social-link" href="https://linkedin.com">
+								<svg class="footer-social-icon">
+									<use href="./images/sprite.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
