--- a/portfolio.html
+++ b/portfolio.html
@@ -65,14 +65,14 @@
 					<ul class="portfolio-list">
 						<li class="portfolio-item">
 							<a class="portfolio-link" href="/">
-								<div class="portfolio-wrapper">
+								<div class="portfolio-wrapper overflow-hidden">
 									<img
 										class="portfolio-img"
 										src="/images/portfolio/desktop/web-site/technoduck.jpg"
 										alt="Technoduck"
 										width="370"
 									/>
-									<div class="portfolio-overlay">
+									<div class="portfolio-overlay web">
 										<p class="portfolio-details">
 											Technoduck is a state-of-the-art coronavirus distribution platform. Companies
 											use this platform for digital espionage and attacks on competitors' secure
@@ -96,7 +96,7 @@
 										alt="Poster New Orlean vs Golden Star"
 										width="370"
 									/>
-									<div class="portfolio-overlay">
+									<div class="portfolio-overlay design">
 										<p class="portfolio-details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
 											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
@@ -120,7 +120,7 @@
 										alt="Seafood Restaurant "
 										width="370"
 									/>
-									<div class="portfolio-overlay">
+									<div class="portfolio-overlay apps">
 										<p class="portfolio-details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
 											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
@@ -144,7 +144,7 @@
 										alt="Project Prime"
 										width="370"
 									/>
-									<div class="portfolio-overlay">
+									<div class="portfolio-overlay marketing">
 										<p class="portfolio-details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
 											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
@@ -168,7 +168,7 @@
 										alt="Project Boxes"
 										width="370"
 									/>
-									<div class="portfolio-overlay">
+									<div class="portfolio-overlay apps">
 										<p class="portfolio-details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
 											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
@@ -185,14 +185,14 @@
 
 						<li class="portfolio-item">
 							<a class="portfolio-link" href="/">
-								<div class="portfolio-wrapper">
+								<div class="portfolio-wrapper overflow-hidden">
 									<img
 										class="portfolio-img"
 										src="/images/portfolio/desktop/web-site/inspiration-has-no-borders.jpg"
 										alt="Inspiration has no Borders"
 										width="370"
 									/>
-									<div class="portfolio-overlay">
+									<div class="portfolio-overlay web">
 										<p class="portfolio-details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
 											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
@@ -216,7 +216,7 @@
 										alt="Limited Edition"
 										width="370"
 									/>
-									<div class="portfolio-overlay">
+									<div class="portfolio-overlay design">
 										<p class="portfolio-details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
 											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
@@ -240,7 +240,7 @@
 										alt="Project LAB"
 										width="370"
 									/>
-									<div class="portfolio-overlay">
+									<div class="portfolio-overlay marketing">
 										<p class="portfolio-details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
 											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
@@ -264,7 +264,7 @@
 										alt="Growing Business"
 										width="370"
 									/>
-									<div class="portfolio-overlay">
+									<div class="portfolio-overlay apps">
 										<p class="portfolio-details">
 											Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ea voluptate,
 											similique, dolore, tempora assumenda delectus magni deserunt quia distinctio
