modal-window animation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -55,7 +59,9 @@
 			<!-- HERO -->
 			<section class="hero">
 				<div class="container">
-					<h1 class="hero-title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+					<h1 class="hero-title animate__animated animate__zoomInDown">
+						EFFECTIVE SOLUTIONS FOR YOUR BUSINESS
+					</h1>
 					<button class="hero-btn" type="button" data-modal-open>Request our service</button>
 				</div>
 			</section>
