--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@
 			</div>
 		</div>
 
-		<script src="./modal.js"></script>
+		<script src="./js/modal.js"></script>
+		<script src="./js/footer-form.js"></script>
 	</body>
 </html>
