--- a/portfolio.html
+++ b/portfolio.html
@@ -332,7 +332,22 @@
 						</li>
 					</ul>
 				</div>
+
+				<div class="footer-subscribe">
+					<h3 class="footer-subscribe-title">Subscribe to the newsletter</h3>
+					<form class="footer-subscribe-form">
+						<input class="footer-email" type="email" name="email" placeholder="E-mail" />
+						<button class="footer-btn" type="submit">
+							Subscribe
+							<svg class="footer-subscribe-icon" width="24" height="24">
+								<use href="./images/sprite.svg#icon-send"></use>
+							</svg>
+						</button>
+					</form>
+				</div>
 			</div>
 		</footer>
+
+		<script src="./js/footer-form.js"></script>
 	</body>
 </html>
