--- a/portfolio.html
+++ b/portfolio.html
@@ -336,7 +336,7 @@
 				<div class="footer-subscribe">
 					<h3 class="footer-subscribe-title">Subscribe to the newsletter</h3>
 					<form class="footer-subscribe-form">
-						<input class="footer-email" type="email" name="email" placeholder="E-mail" />
+						<input class="footer-email" type="email" name="subscribe-email" placeholder="E-mail" />
 						<button class="footer-btn" type="submit">
 							Subscribe
 							<svg class="footer-subscribe-icon" width="24" height="24">
